--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "github-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lucascorreia95.github.io/github-ui/",
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
